# dbay

./: .gitignore  LAB_LINK_SYNC.md  README.md  dbay_lab_link_integration_handoff.md
.github/workflows/: deploy.yml  publish_pypi.yml  tauri_release.yml
device-bay-client/: README.md  pyproject.toml  runner.py
device-bay-client/dbay/: __init__.py  client.py
device-bay-client/dbay/modules/: dac16d.py  dac4d.py
docs/: quartz.config.ts
docs/content/: Development.md  Tauri.md  index.md
docs/content/.obsidian/: workspace.json
docs/content/Development/: Development Environment.md  Development Setup.md  Development.md  Software frontend and backend.md
docs/content/Modules/: 16 Channel Differential (dac16D).md  4 Channel Differential (dac4D).md
docs/content/Modules and Rack/: 4 Channel Differential (dac4D).md  5 Channel ADC (adc4D).md  Communication with the Control Module.md  Control Module.md  Summary.md  The Rack.md
docs/content/Quickstart/: Install a Module.md  (+4 more)
firmware/: PCA9557.h  dbay_4triacDAC.cpp  dbay_4triacDAC.h  dbay_ctrlFW.ino  dbay_dev.h  ltc268x.cpp
firmware/dbay_ctrlFW/: AD5684.cpp  AD5684.h  PCA9557.cpp  ad7124-driver.cpp  ad7124-driver.h  ad7124-private.cpp  ad7124-private.h  ad7124.cpp  ad7124.h  dbay_32DAC.cpp  dbay_32DAC.h  dbay_4triacDAC.h  dbay_ctrlFW.ino  dbay_dev.cpp  dbay_dev.h  ltc268x.cpp  ltc268x.h
gui/: README.md
python_client/: README.md  pyproject.toml  runner.py
python_client/src/: client.py
scripts/: README.md  extract_changelog.py  release.ts
software/: .gitignore  Dockerfile  README.md  requirements.txt
software/backend/: DACVME_ctrl.py  README.md  initialize.py  logging.py  main.py  makefile  pyproject.toml  state.py  udp_control.py  vsource_params.json
software/client/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
software/client/dbay/: __init__.py  client.py  direct.py  gui_sync.py  http.py
software/client/dbay/alt/: dbay.py
software/client/dbay/modules/: adc4d.py  dac16d.py  dac4d.py  dac4eth.py  fafd.py  hic4.py
software/client/examples/: example_direct_serial.py  example_direct_udp.py  example_gui.py
software/client/tests/: test_attach_module.py  test_direct_commands.py  test_direct_param_validation.py  test_gui_mode.py  test_injected_connection.py
software/frontend/: build.ts  bun.lockb  commands_for_tauri_2.txt  develop.ts  index.html  makefile  move_python.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
software/frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.old.json
software/frontend/src-tauri/capabilities/: default.json
software/frontend/src-tauri/flatpak/: device-bay-flatpak-template.yml  device-bay-flatpak.yml
software/frontend/src-tauri/flatpak_resources/: device-bay-flatpak-template.yml
software/frontend/src-tauri/src/: lib.rs  main.rs
software/gui/: CHANGELOG.md  build.sh  dev-browser.sh  dev-tauri.sh  requirements.txt
software/gui/backend/: .gitignore  pyproject.toml  pyproject_old.toml
software/gui/backend/backend/: dbay_bridge.py  initialize.py  location.py  main.py  main.spec  makefile  module.py  module_registry.py  pydantic_to_typescript.py  serialInstDbay.py  server_api.py  server_logging.py  state.py  sync.py  udp_adapter.py  udp_control.py  util.py
software/gui/backend/backend/addons/: vsense.py  vsource.py
software/gui/backend/backend/compiled_frontend/: index.html
software/gui/backend/backend/config/: vsource_params.json
software/gui/backend/backend/dbay_control/: index.html
software/gui/backend/backend/modules/: adc4D.py  adc4D_spec.py  dac16D.py  dac16D_spec.py  dac4D.py  dac4D_spec.py
software/gui/backend/backend/snspd_bias_control_old/: index.html  index.js
software/gui/backend/backend/snspd_bias_control_old/assets/: index-BTjj9xiW.css
software/gui/backend/tests/: conftest.py  mock_udp_server.py  test_adc4d_polling.py  test_dynamic_udp_switch.py  test_lab_link_sync.py
software/gui/frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
software/gui/frontend/src-tauri/flatpak_resources/: com.device.bay.desktop
software/gui/frontend/src-tauri/icons/: icon.icns
software/gui/frontend/src-tauri/src/: main.rs
software/gui/frontend/src-tauri/windows/fragments/: frag.wxs
software/hardware_sim/: README.md  pyproject.toml
software/hardware_sim/dbay_sim/: __init__.py  __main__.py  server.py
software/hardware_sim/tests/: test_protocol.py
(+182 files in other folders)
