[project]
name = "dbay"
version = "0.3.0"
description = "Unified dual-mode client (lab-link GUI sync + direct UDP/Serial) for Device Bay VME racks"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lab-link>=0.2.0",
    "pydantic>=2.10.6",
    "pyserial>=3.5",
]
authors = [{ name = "Andrew Mueller", email = "andrewstermueller@gmail.com" }]
license = { text = "MIT" }
keywords = ["dbay", "client", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = { Homepage = "https://github.com/bkorzh/dbay", Documentation = "https://bkorzh.github.io/dbay/" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dbay", "dbay.modules", "dbay.addons"]

[dependency-groups]
dev = ["pytest>=8.3.5"]
