[package]
name = "device-bay"
version = "0.1.2"
description = "Device Bay"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }

[dependencies]
# if you want to remove browser devtools for production builds in the future, remove "devtools" from tauri.features array
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.10", features = ["devtools"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
